Add hero and about sections

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <load ="partials/menu.html" />
     <main>
       <load ="partials/hero.html" />
-      <load ="partials/description.html" />
+      <load ="partials/about.html" />
       <load ="partials/play.html" />
       <load ="partials/choose.html" />
       <load ="partials/boosters.html" />
