Add faq, features, download, play, gallery and skills sections

--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,12 @@
     <main>
       <load ="partials/hero.html" />
       <load ="partials/about.html" />
-      <load ="partials/play.html" />
-      <load ="partials/choose.html" />
-      <load ="partials/boosters.html" />
       <load ="partials/gallery.html" />
-      <load ="partials/reviews.html" />
+      <load ="partials/play.html" />
+      <load ="partials/skills.html" />
+      <load ="partials/features.html" />
+      <load ="partials/faq.html" />
+      <load ="partials/download.html" />
     </main>
     <load ="partials/footer.html" />
     <load ="partials/banner.html" />
